# rad-server

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: event.rs  main.rs
testdata/: nikola.ics
