[package]
name = "rad_server"
version = "0.1.0"
edition = "2021"
authors = ["Marc Ryan Riginding <ryan@riginding.com>"]
description = "A small crate to parse ics file and display it in RAD PROTOCOL(tm) format"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ical = "0.7.0"
